--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="ui inverted container">
       <nav class="ui inverted secondary stackable menu">
         <h2 class="ui teal header item">Anchor</h2>
-        <a href="#" class="nav-item item blog-nav-mobile-hide"><i class="icon home"></i>首页</a>
+        <a href="#" class="nav-item item blog-nav-mobile-hide active"><i class="icon home"></i>首页</a>
         <a href="#" class="nav-item item blog-nav-mobile-hide"><i class="icon idea"></i>分类</a>
         <a href="#" class="nav-item item blog-nav-mobile-hide"><i class="icon tags"></i>标签</a>
         <a href="#" class="nav-item item blog-nav-mobile-hide"><i class="icon clone"></i>归档</a>
